<resources>
    <string name="app_name">ShopMobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ustawienia</string>

    <string name="menu_login">Logowanie</string>
    <string name="menu_home">Home</string>
    <string name="menu_inventory">Inwentaryzacja</string>
    <string name="menu_findProduct">Szukaj</string>
    <string name="menu_settings">Ustawienia</string>

    <string name="yes">Tak</string>
    <string name="no">Nie</string>

    <string name="inventory_position_fragment_lbl">Dodawanie pozycji</string>
    <string name="common_inventory_position_fragment_lbl">Zwykła inwentaryzacja</string>
    <string name="inventory_position_edit_fragment_lbl">Edycja pozycji</string>
    <string name="add_edit_product_fragment_lbl">Dodawanie/edycja produktu</string>

    <string name="lbl_productBarcode">Kod kreskowy produktu</string>
    <string name="lbl_productName">Nazwa produktu</string>
    <string name="lbl_quantity">Ilość</string>
    <string name="lbl_unit">J.M.</string>
    <string name="lbl_brand">Marka</string>
    <string name="lbl_capacity">Pojemność</string>

    <string name="lbl_price">Cena</string>
    <string name="lbl_name">Nazwa</string>
    <string name="lbl_status">Status</string>
    <string name="lbl_type">Typ</string>
    <string name="lbl_executeWay">Sposób przeprowadzania</string>
    <string name="lbl_companyInformation">Nazwa i adres firmy</string>
    <string name="lbl_createdByUser">Utworzone przez</string>
    <string name="lbl_creationDate">Data utworzenia</string>
    <string name="lbl_scanDate">Data skanowania</string>

    <string name="btn_confirm">Zatwierdź</string>
    <string name="btn_edit">Edytuj</string>

    <string name="lbl_lightDarkMode">Tryb dzień/noc</string>
    <string name="lbl_language">Język</string>

    <string name="error_product_not_found_by_barcode">Nie znaleziono produktu z podanym kodem</string>
    <string name="error_empty_field">Pole nie może być puste</string>
    <string name="error_zero_quantity">Ilość musi być większa od zera</string>
    <string name="error_zero_price">Cena musi być większa od zera</string>
    <string name="toast_err_inventories_404">Nie udało się pobrać listy dostępnych inwentaryzacji</string>

    <string name="successfully_added_edited_product">Pomyślnie dodano/zaktualizowano produkt</string>

    <string name="al_dial_title_delete_position">Usuwanie pozycji</string>

    <string name="al_dial_message_delete_position">Czy na pewno chcesz usunąć tę pozycję?</string>
</resources>